cmake_minimum_required(VERSION 3.21)
project(MasterCppCourse)

set(CMAKE_CXX_STANDARD 14)

add_executable(class class.cpp)
add_executable(accessors accessors.cpp)
add_executable(data data.cpp)
add_executable(member-functions member-functions.cpp)
add_executable(constructors constructors.cpp)
add_executable(implicit_explicit implicit-explicit.cpp)
add_executable(namespace namespace.cpp)
add_executable(rational rational.cpp)
